Backward compatible changes:

BUGFIXES:
  ZOOKEEPER-2141. ACL cache in DataTree never removes entries (Adam Milne-Smith via camille)

  ZOOKEEPER-1888. ZkCli.cmd commands fail with "'java' is not recognized as an
  internal or external command" (Ivan Mitic via michim)

  Fix command handling in the C client shell (phunt via fpj)

  ZOOKEEPER-2146 BinaryInputArchive readString should check length before
  allocating memory (Hongchao Deng via michim)

  ZOOKEEPER-1256: ClientPortBindTest is failing on Mac OS X
  (Camille via phunt)

  ZOOKEEPER-2360: Update commons collections version used by tests/releaseaudit
  (phunt via cnauroth

IMPROVEMENTS:

  ZOOKEEPER-1575. adding .gitattributes to prevent CRLF and LF mismatches for
  source and text files (Raja Aluri via michim)

  ZOOKEEPER-1897. ZK Shell/Cli not processing commands (stack via michim)

  ZOOKEEPER-2594: Use TLS for downloading artifacts during build
  (Olaf Flebbe via phunt)

NEW FEATURE:

  ZOOKEEPER-1045: Support Quorum Peer mutual authentication via SASL
  (rakeshr via phunt)

Release 3.4.6 - 2014-03-10

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1474. Cannot build Zookeeper with IBM Java: use of Sun
  MXBean classes (Adalberto Medeiros via phunt)

  ZOOKEEPER-1596. Zab1_0Test should ensure that the file is closed
  (Enis Soztutar via phunt)

  ZOOKEEPER-1513. "Unreasonable length" exception while starting a
  server (Skye W-M via phunt)

  ZOOKEEPER-1581. change copyright in notice to 2012 (breed via phunt)

  ZOOKEEPER-753. log4j dependency in the pom needs to have exclusion
  lists (Sean Busbey via phunt)

  ZOOKEEPER-1553. Findbugs configuration is missing some dependencies
  (Sean Busbey via phunt)

  ZOOKEEPER-1478. Small bug in QuorumTest.testFollowersStartAfterLeader( )
  (Alexander Shraer via fpj, breed, phunt)

  ZOOKEEPER-1387. Wrong epoch file created
  (Benjamin Busjaeger via breed, phunt)

  ZOOKEEPER-1578. org.apache.zookeeper.server.quorum.Zab1_0Test failed due to