@@ -3,6 +3,10 @@ Backward compatible changes:
 BUGFIXES:
   ZOOKEEPER-2141. ACL cache in DataTree never removes entries (Adam Milne-Smith via camille)
 
+  ZOOKEEPER-2498: Potential resource leak in C client when processing
+  unexpected / out of order response (Michael Han via rgs)
+
+
   ZOOKEEPER-1888. ZkCli.cmd commands fail with "'java' is not recognized as an
   internal or external command" (Ivan Mitic via michim)
 
